--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -50,7 +50,8 @@
                     {% endif %}
                     <br>
                     <br>
-                    <form method="POST" action="{% url 'login' %}"> {% csrf_token %}
+                    <form method="POST" action="{% url 'login' %}">
+                        {% csrf_token %}
                         <input name="username" class="input_cadastrar input_cadastrar_email" type="text" placeholder="Username...">
                         <br>
                         <br>
